--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE-edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entertainment Finder</title>
+  <title>Weather Tracker</title>
   <link rel="stylesheet" href="./assets/css/reset.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <header>
+          <h1>Weather Dashboard</h1>
+        </header>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">
+        <aside>Search</aside>
+      </div>
+      <div class="col-9">
+        <main>
+          <div class="row">
+            <div class="cik-12">Top Container</div>
+          </div>
+          <div class="row">
+            <div class="col-3">1st Container</div>
+            <div class="col-3">2nd Container</div>
+            <div class="col-3">3rd Container</div>
+            <div class="col-3">4th Container</div>
+          </div>
+      </div>
+      </main>
+    </div>
+  </div>
+  </div>
 
-  <header>
-    <h1>Weather Tracker</h1>
-    <nav>
+</body>
 
-    </nav>
-  </header>
+</html>
