HTML layout mostly done

--- a/index.html
+++ b/index.html
@@ -23,18 +23,88 @@
     </div>
     <div class="row">
       <div class="col-3">
-        <aside>Search</aside>
+        <aside>
+          <div id="search-container">
+            <h2>Search for a City:</h2>
+            <form id="search-form">
+              <input class="col-12" type="text" placeholder="San Diego" />
+              <button class="btn btn-primary col-12">Search</button>
+            </form>
+          </div>
+          <div>
+            <button class="btn btn-secondary col-12">Austin</button>
+          </div>
+        </aside>
       </div>
       <div class="col-9">
         <main>
           <div class="row">
-            <div class="cik-12">Top Container</div>
+            <div class="cik-12">
+              <h2 id="weather-day-city">Atlanta (3/30/2021)</h2>
+              <dl>
+                <dt>Temp:</dt>
+                <dd id="weather-day-temp">73.32</dd>
+                <dt>Wind:</dt>
+                <dd id="weather-day-wind">9.53 MPH</dd>
+                <dt>Humidity</dt>
+                <dd id="weather-day-humidity">66%</dd>
+                <dt>UV Index:</dt>
+                <dd id="weather-day-uv-index" class="rounded">0.47</dd>
+              </dl>
+            </div>
           </div>
           <div class="row">
-            <div class="col-3">1st Container</div>
-            <div class="col-3">2nd Container</div>
-            <div class="col-3">3rd Container</div>
-            <div class="col-3">4th Container</div>
+            <div class="col-12">
+              <h3>5-Day Forecast:</h3>
+            </div>
+            <div class="card-weather col-md-3 col-sm-12 bg-dark text-light">
+              <h4>3/31/2021</h4>
+              <img src="https://via.placeholder.com/20" />
+              <dl>
+                <dt>Temp:</dt>
+                <dd>73.32</dd>
+                <dt>Wind:</dt>
+                <dd>9.53 MPH</dd>
+                <dt>Humidity</dt>
+                <dd>66%</dd>
+              </dl>
+            </div>
+            <div class="card-weather col-md-3 col-sm-12 bg-dark text-light">
+              <h4>3/31/2021</h4>
+              <img src="https://via.placeholder.com/20" />
+              <dl>
+                <dt>Temp:</dt>
+                <dd>73.32</dd>
+                <dt>Wind:</dt>
+                <dd>9.53 MPH</dd>
+                <dt>Humidity</dt>
+                <dd>66%</dd>
+              </dl>
+            </div>
+            <div class="card-weather col-md-3 col-sm-12 bg-dark text-light">
+              <h4>3/31/2021</h4>
+              <img src="https://via.placeholder.com/20" />
+              <dl>
+                <dt>Temp:</dt>
+                <dd>73.32</dd>
+                <dt>Wind:</dt>
+                <dd>9.53 MPH</dd>
+                <dt>Humidity</dt>
+                <dd>66%</dd>
+              </dl>
+            </div>
+            <div class="card-weather col-md-3 col-sm-12 bg-dark text-light">
+              <h4>3/31/2021</h4>
+              <img src="https://via.placeholder.com/20" />
+              <dl>
+                <dt>Temp:</dt>
+                <dd>73.32</dd>
+                <dt>Wind:</dt>
+                <dd>9.53 MPH</dd>
+                <dt>Humidity</dt>
+                <dd>66%</dd>
+              </dl>
+            </div>
           </div>
       </div>
       </main>
